--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,8 +1,8 @@
 name: Build and push Docker image
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [main]
 
 jobs:
   docker:
@@ -17,12 +17,11 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: cruizba
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: cruizba/ubuntu-dind:${{ github.ref_name }},cruizba/ubuntu-dind:latest
+          tags: ${{ vars.DOCKER_USER }}/ubuntu-dind:latest
